# netorcai-client-fortran

./: .gitignore  .travis.yml  README.md  meson.build
examples/hello-gl/: Makefile
examples/hello-gl/src/: main.f90
examples/hello-player/: Makefile
examples/hello-player/src/: main.f90
examples/hello-visu/: Makefile
examples/hello-visu/src/: main.f90
src/: client.f90  json.f90  main.f90  message.f90  process.f90  proto_version.f90  socket.f90  stdc.f90  utils.f90  vector.f90
src/tests/: basic.f90  json.f90  utils.f90
subprojects/: fson.wrap
